# KTranslatorV2

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/adapters/: mod.rs
src/adapters/capture/: mod.rs  screenshots_capture.rs
src/adapters/ocr/: gemini_ocr.rs  mod.rs  paddle_ocr.rs  tesseract_ocr.rs  windows_ocr.rs
src/adapters/translate/: gemini.rs  groq.rs  mod.rs  ollama.rs  openai.rs
src/core/: coordinator.rs  mod.rs  model.rs  ports.rs  text_cleaner.rs  types.rs  worker.rs
src/core/usecases/: mod.rs  tick_region.rs
src/infra/: mod.rs  settings.rs  win32.rs
src/ui/: app.rs  crop_overlay.rs  mod.rs  popups.rs
src/ui/components/: mod.rs  settings_ui.rs  slot_ui.rs
