[package]
name = "ktranslator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
eframe = { version = "0.31", features = ["default_fonts"] }
egui = "0.31"
parking_lot = "0.12"
directories = "6"
screenshots = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
windows = { version = "0.62.2", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Foundation", "Foundation_Collections", "Globalization", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Threading"] }
[target.'cfg(not(windows))'.dependencies]
leptess = "0.14"
